logs/merchant-gateways.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/merchant_gateways'...
Listing './lib/python3.5/site-packages/merchant_gateways/billing'...
Compiling './lib/python3.5/site-packages/merchant_gateways/billing/credit_card.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/billing/credit_card.py", line 265
    raise MerchantGatewayError, 'Unrecognized card type'
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/merchant_gateways/billing/gateways'...
Compiling './lib/python3.5/site-packages/merchant_gateways/billing/gateways/authorize_net.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/billing/gateways/authorize_net.py", line 384
    raise StandardError, u"Invalid Automated Recurring Billing Action: " + unicode(action)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/merchant_gateways/lib'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways'...
Compiling './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/braintree_orange_suite.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/braintree_orange_suite.py", line 79
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/cybersource_suite.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/cybersource_suite.py", line 35
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/gateway_suite.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/gateway_suite.py", line 19
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/paymentech_orbital_suite.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/paymentech_orbital_suite.py", line 188
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/schemas'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/schemas/cybersource'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/schemas/paymentech_orbital'...
Listing './lib/python3.5/site-packages/merchant_gateways/tests/billing/gateways/schemas/xmlpay'...
Compiling './lib/python3.5/site-packages/merchant_gateways/tests/test_helper.py'...
***   File "./lib/python3.5/site-packages/merchant_gateways/tests/test_helper.py", line 54
    except except_cls, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/merchant_gateways-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
